Aligns tags wrapper with top of books. Closes issue #209.

--- a/less/app.less
+++ b/less/app.less
@@ -353,6 +353,7 @@ h1 + #story-meta { margin-top: -11px; }
 
 .tags-wrapper {
 	position: relative;
+	padding-top: 46px;
 }
 
 .tags {
